# dvc-cc

./: .gitignore  DVC_AND_CC (2).odp  NOTICE  README.md  Untitled 1.odg  dvc-cc-logo.odg  dvc_cc_demo.md  dvc_demo.md  dvc_only_demo.md  install.sh  papermill.ipynb  pyproject.toml
cc-connector-variable-to-file/: pyproject.toml
cc-connector-variable-to-file/cc_connector_variable_to_file/: __init__.py  __main__.py  main.py
dep/: cc_core-7.0.0-py3-none-any.whl  cc_faice-7.0.0-py3-none-any.whl
docker/executer/: connector_variable_to_file  executepy
dockerfile-examples/dvc-cc_basic-dockerfile/dev/: Dockerfile  build-and-publish
dockerfile-examples/dvc-cc_basic/10.0/: Dockerfile  build-and-publish
dockerfile-examples/dvc-cc_basic/dev/: Dockerfile  build-and-publish
dockerfile-examples/dvc-cc_large-dockerfile/dev/: Dockerfile  build-and-publish
dockerfile-examples/dvc-cc_large/dev/: Dockerfile  build-and-publish
dockerfile-examples/dvc-cc_pytorch-dockerfile/1.2/: Dockerfile  build-and-publish
dockerfile-examples/dvc-cc_pytorch/1.2/: Dockerfile  build-and-publish
dvc-cc/: README.md  Untitled.ipynb  cli_modes.py  dvc_cc_demo.md  install.sh  main.py  pyproject.toml
dvc-cc-agent/: pyproject.toml
dvc-cc-agent/dvc_cc_agent/: __init__.py  __main__.py  bcolors.py  copy_output_files.py  main.py  start_dvc_repro.sh  version.py
dvc-cc-connector/: pyproject.toml
dvc-cc-connector/dvc_cc_connector/: __init__.py  __main__.py  main.py
dvc-cc-local/: pyproject.toml
dvc-cc-local/dvc_cc/: main.py
dvc-cc-local/tests/: test_script2.sh  test_script3.sh  test_script4.sh
dvc-cc-server/: pyproject.toml
dvc-cc-server/dvc_cc_server/: __init__.py  __main__.py  execute.py  main.py
dvc-cc/Tutorial/: SimpleStart.md
dvc-cc/dvc_cc/: __main__.py  cli_modes.py  main.py  version.py
dvc-cc/dvc_cc/cancel/: main.py
dvc-cc/dvc_cc/dummy/: __main__.py  class_variable.py  main.py  variable.py
dvc-cc/dvc_cc/dvc/: __main__.py  main.py
dvc-cc/dvc_cc/git/: branch.py  commit_and_push.py  gitcheckout  main.py  sync.py
dvc-cc/dvc_cc/hyperopt/: __main__.py  command.py  hyperoptimizer.py  main.py  new.py  new_suggest.py  plot_beta_distribution.py  stage.py  var.py  variable.py
dvc-cc/dvc_cc/init/: main.py
dvc-cc/dvc_cc/keyring/: main.py
dvc-cc/dvc_cc/live_output/: __main__.py  main.py
dvc-cc/dvc_cc/output_to_tmp/: __main__.py  main.py  main2.py
dvc-cc/dvc_cc/output_to_tmp_fast/: __main__.py  main.py
dvc-cc/dvc_cc/output_to_tmp_old/: main.py
dvc-cc/dvc_cc/run/: jupyter_notebook_to_source.py  main.py  optuna_scripts.py  papermill_helper.py
dvc-cc/dvc_cc/run_all_defined/: main.py
dvc-cc/dvc_cc/setting/: __main__.py  config_parser.py  main.py  settingsinfo.yml
dvc-cc/dvc_cc/sshfs/: __main__.py  main.py
dvc-cc/dvc_cc/status/: main.py
dvc-cc/git/: __main__.py  main.py
dvc-cc/tests/: papermill_with_output.py  papermill_without_output.py  run_all.py  simple_tensorflow_test.py  sshfs_test.py  staff_credentials.py  student_credentials.py  test.py  test2.py  test_cc_error.sh  test_script3_remove.sh  test_script4.sh  test_script4_sshfs.sh  test_script5.sh  tmp.sh
dvc-cc/tests/Helper_Scripts/: papermill.ipynb  papermill_with_output.ipynb  sshfs_sum.py  train.ipynb  train.py
dvc-cc/tests/OLD/: test_script.sh  test_script2.sh  test_script3.sh  test_script3_remove.sh  test_script4.sh  test_script5.sh  test_script_dvcchat.sh
dvc-cc/tests/OLD/data_for_testscript4/: .gitignore  Untitled Document 2  script_for_test4_train (copy).py
dvc-cc/tests/data_for_testscript4/: train.ipynb  train.py
dvc-cc/tutorial/: .~lock.get_started_pipeline.odg#  DVC-CC-Overview.odg  Get_Started.md  SimpleStart.md  _get_started_only_commands.md  _live_output.md  _only_dvc.md  _run_hyper_optimization.md  _set_all_parameters.md  _settings.md  _settings_htwexample.md  _working_with_jupyter_notebook.md  _working_with_sshfs.md  get_started_pipeline.odg  model.h5  summary.yml  train.ipynb  train.py  train2.ipynb  train2.ipynb.odg
dvc-cc/tutorial/tensorboard/train/: events.out.tfevents.1568975361.t.12792.723.v2  events.out.tfevents.1568975362.t.profile-empty
dvc-cc/tutorial/tensorboard/train/plugins/profile/2019-09-20_12-29-22/: local.trace
dvc-cc/tutorial/tensorboard/validation/: events.out.tfevents.1568975364.t.12792.4999.v2
dvc_cc/: cli_modes.py  main.py
dvc_cc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
dvc_cc/cancel/: __main__.py  main.py
dvc_cc/dummy/: class_variable.py  command.py  dummy_to_dvc.py  main.py  new.py  variable.py
dvc_cc/git/: __main__.py  branch.py  commit_and_push.py  git_commit_and_push  gitbranch  main.py
dvc_cc/init/: __main__.py  main.py
dvc_cc/job/: __main__.py  cc_check_jobstatus  cc_check_last  cc_remove_all_processing_jobs  cc_start_jobs  check_all_jobs.py  check_last_job.py  main.py  remove_all_processing_jobs.py  start_jobs.py
dvc_cc/jobs/: main.py  run.py
dvc_cc/output_to_tmp/: main.py
dvc_cc/project/: __main__.py  create.py  dummy_to_dvc.py  main.py
dvc_cc/red/: __main__.py  add_to_red_yml_file (copy).py  add_to_red_yml_file.py  cc_create_red_yml_file  cc_create_red_yml_file_mountfile  cc_reset_all  cc_reset_red_yml_file  create_red_yml_file.py  delete_red_yml_file.py  main.py
dvc_cc/run/: __main__.py  helper.py  main.py
dvc_cc/run_all_defined/: __main__.py  main.py
dvc_cc/setting/: main.py
dvc_cc/status/: main.py
tests/: script_for_test4_train.py  test_script.sh  test_script3.sh  test_script4.sh  test_script_dvcchat.sh
tests/data_for_testscript4/: Untitled Document 2  script_for_test4_train (copy).py  script_for_test4_train.py  train.dvc.dummy
(+48 files in other folders)
