[tool.poetry]
name = "dvc-cc"
version = "0.1.0"
description = "This connector is used to combine the work of CC (www.curious-containers.cc) and DVC (Open-source Version Control System for Machine Learning Projects)."
authors = ["Jonas Annuscheit <annusch@htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/..."
homepage = "https://github.com/..."

[tool.poetry.dependencies]
python = "^3.6"
cc-faice = "^6.1"
dvc = "^0.35.7"
paramiko = "^2.4"
numpy = "^1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
dvc-cc = 'dvc_cc.main:main'
