[tool.poetry]
name = "dvc-cc"
version = "0.1.0"
description = "This connector is used to combine the work of CC (www.curious-containers.cc) and DVC (Open-source Version Control System for Machine Learning Projects)."
authors = ["Jonas Annuscheit <annusch@htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/mastaer/dvc-cc.git"
homepage = "https://github.com/mastaer/dvc-cc.git"

[tool.poetry.dependencies]
#pip = "^19.1"
jsonschema = "^3.0"
python = "^3.6"
keyring = "^19.0"
#cc-core = { git = "https://github.com/curious-containers/cc-core.git", branch = "7.0" }
#cc-faice = { git = "https://github.com/curious-containers/cc-faice.git", branch = "7.0" }
dvc = "^0.35.7"
paramiko = "^2.4"
numpy = "^1.16"
#hub = "^2.0"
#cc-faice = { file = "/home/j/Documents/github/dvc-cc/dep/cc_faice-7.0.0-py3-none-any.whl" }
#cc-core = { file = "/home/j/Documents/github/dvc-cc/dep/cc_core-7.0.0-py3-none-any.whl" }

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dvc-cc = 'dvc_cc.main:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

