[tool.poetry]
name = "dvc-cc-connector"
version = "0.8.1"
description = ""
authors = ["Jonas <jonas.annuscheit@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4"
pyjson = "^1.3"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dvc-cc-connector = 'dvc_cc_connector.main:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

