[tool.poetry]
name = "dvc-cc-server"
version = "0.1.0"
description = ""
authors = ["Jonas <jonas.annuscheit@gmail.com>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
dvc-cc-execute = 'dvc_cc_server.main:main'
