[tool.poetry]
name = "dvc-cc"
version = "0.3.0"
description = "This connector is used to combine the work of CC (www.curious-containers.cc) and DVC (Open-source Version Control System for Machine Learning Projects)."
authors = ["Jonas Annuscheit <annusch@htw-berlin.de>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/mastaer/dvc-cc.git"
homepage = "https://github.com/mastaer/dvc-cc.git"

[tool.poetry.dependencies]
python = "^3.6"
keyring = "^19.0"
dvc = "^0.41.0"
paramiko = "^2.4"
numpy = "^1.16"
cc-faice = "^7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
dvc-cc = 'dvc_cc.main:main'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

